# coverage-conditional-plugin

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
coverage_conditional_plugin/: __init__.py  version.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
test_project/: .coveragerc  example.py  omit2.py  pyproject.toml
tests/: test_example.py  test_implementation.py  test_integration.py  test_omits.py  test_plugin.py
