[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "coverage-conditional-plugin"
version = "0.3.1"
description = "Conditional coverage based on any rules you define!"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/wemake-services/coverage-conditional-plugin"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

coverage = "^5.0"
packaging = "^20.4"


[tool.poetry.dev-dependencies]
mypy = "^0.910"

wemake-python-styleguide = "^0.15"
flake8-pytest-style = "^1.5"
nitpick = "^0.26"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^2.12"
pytest-randomly = "^3.8"
pytest-pythonpath = "^0.7"
