[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "coverage-conditional-plugin"
version = "0.5.0"
description = "Conditional coverage based on any rules you define!"
license = "MIT"

authors = []

# This is required for source distributions, like the one 
# used for Alpine linux. See #157
include = [
  {path = 'tests/*', format = 'sdist'},
  {path = 'test_project/*', format = 'sdist'},
]
readme = "README.md"

repository = "https://github.com/wemake-services/coverage-conditional-plugin"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"

coverage = ">=5,<7"
packaging = ">=20.4"


[tool.poetry.dev-dependencies]
mypy = "^0.971"
types-setuptools = "^63.4"

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.5"
nitpick = "^0.29"

safety = "^2.1"

pytest = "^6.2"
pytest-cov = "^3.0"
pytest-randomly = "^3.10"
pytest-pythonpath = "^0.7"
